# libsixel

./: NEWS  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
converters/: img2sixel.c  img2sixel_tests.sh  malloc_stub.c  malloc_stub.h  meson.build  sixel2png.c
converters/shell-completion/bash/: img2sixel
include/: meson.build  sixel.h.in
python/: meson.build
src/: allocator.c  chunk.c  decoder.c  dither.c  dither.h  encoder.c  frame.c  frame.h  fromgif.c  fromsixel.c  loader.c  meson.build  pixelformat.c  scale.c  tosixel.c  writer.c
tools/: meson.build
